--- a/assets/pyreadhome.css
+++ b/assets/pyreadhome.css
@@ -1,6 +1,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #303030;
+  font-size: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .ref, .figure_ref {
@@ -15,7 +18,7 @@ body {
   border-radius: 5px;
 }
 
-.section-title, .subsection-title {
+.section-title, .subsection-title, .fig-cap {
   font-weight: bold;
   user-select: none;
   border: 2px solid #EEEEEE;
@@ -46,11 +49,6 @@ li {
   margin-bottom: 10px;
 }
 
-p {
-  font-size: 20px;
-  padding-left: 10px;
-}
-
 table {
   font-size: 20px;
   padding-left: 10px;
@@ -60,7 +58,7 @@ th, td {
   border-bottom: 1px solid #ddd;
 }
 
-.active, .section-title:hover, .subsection-title:hover {
+.active, .section-title:hover, .subsection-title:hover, .fig-cap:hover {
   background-color: #F0F8FF;
 }
 
@@ -71,4 +69,37 @@ th, td {
 .section-content, .subsection-content {
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+figure {
+  margin: 0;
+  margin-left: 10px;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.fig-leg {
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.fig-img {
+  flex-shrink: 0;
+  align-self: center;
+}
+
+.fig-details {
+  flex-grow: 1;
+  flex-basis: 45%;
+  align-self: center;
+  margin-left: 20px;
+}
+
+.fig-cap {
+  padding: 5px;
+  margin-bottom: 15px;
 }
