--- a/assets/pyreadhome.css
+++ b/assets/pyreadhome.css
@@ -1,9 +1,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #303030;
+}
+
+.article {
   font-size: 20px;
   padding-left: 10px;
   padding-right: 10px;
+  transition: margin-left .5s;
 }
 
 .ref, .figure_ref {
@@ -103,4 +107,56 @@ figure {
 .fig-cap {
   padding: 5px;
   margin-bottom: 15px;
+}
+
+.sidenav {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  border: 2px solid #EEEEEE;
+  width: 0;
+  background-color: white;
+  overflow-x: hidden;
+  transition: 0.3s;
+}
+
+.sidenav:hover {
+  width: calc(max(200px, 20vw));
+}
+
+.sidenav-linkcon:hover {
+  background-color: aliceblue;
+}
+
+.sidenav-linkcon {
+  margin: -1px;
+  border: 1px solid #EEEEEE;
+  display: flex;
+  height: 65px;
+  text-overflow: ellipsis;
+}
+
+.sidenav-x:hover {
+  background-color: #ADD8E6;
+}
+
+.sidenav-x {
+  font-size: 36px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  width: 60px;
+  height: 55px;
+  user-select: none;
+}
+
+.sidenav-link {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  overflow-y: hidden;
+  user-select: none;
 }
