--- a/assets/pyreadhome.css
+++ b/assets/pyreadhome.css
@@ -15,6 +15,8 @@ body {
   user-select: none;
   padding-left: 2px;
   padding-right: 2px;
+  position: relative;
+  display: inline-block;
 }
 
 .ref:hover, .figure_ref:hover {
@@ -22,7 +24,49 @@ body {
   border-radius: 5px;
 }
 
+.ref-tip {
+  visibility: hidden;
+  Z-index: 1;
+  color: #303030;
+  border: 1px solid #eeeeee;
+  border-radius: 10px;
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 20vw;
+  font-size: 12px;
+  top: 100%;
+  left: -10vw;
+  background-color: white;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.ref:hover .ref-tip, .ref-tip.active, .ref-tip:hover {
+  visibility: visible;
+  opacity: 1;
+}
+
+.ref-tip-con {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 5px;
+  border-bottom: 1px solid aliceblue;
+}
+
+.ref-tip-con:hover {
+  background: aliceblue;
+}
+
+.ref-tip-label {
+  color: Blue;
+  font-weight: bold;
+  font-size: 14px;
+}
+
 .section-title, .subsection-title, .fig-cap {
+  Z-index: 0;
   font-weight: bold;
   user-select: none;
   border: 2px solid #EEEEEE;
@@ -62,16 +106,21 @@ th, td {
   border-bottom: 1px solid #ddd;
 }
 
-.active, .section-title:hover, .subsection-title:hover, .fig-cap:hover {
+.section-title.active, .subsection-title.active, .fig-cap.active, .section-title:hover, .subsection-title:hover, .fig-cap:hover {
   background-color: #F0F8FF;
 }
 
-.active {
+.section-title.active, .subsection-title.active, .fig-cap.active {
   color: RoyalBlue;
 }
 
 .section-content, .subsection-content {
   overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+.section-content.active, .subsection-content.active {
+  overflow: visible;
   transition: max-height 0.2s ease-out;
 }
 
@@ -110,6 +159,7 @@ figure {
 }
 
 .sidenav {
+  Z-index: 2;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -120,7 +170,7 @@ figure {
   width: 0;
   background-color: white;
   overflow-x: hidden;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
 .sidenav:hover {
@@ -132,11 +182,14 @@ figure {
 }
 
 .sidenav-linkcon {
-  margin: -1px;
   border: 1px solid #EEEEEE;
   display: flex;
-  height: 65px;
+  height: 60px;
   text-overflow: ellipsis;
+}
+
+.sidenav-linkcon.active {
+  background-color: #f9ff85;
 }
 
 .sidenav-x:hover {
@@ -147,9 +200,9 @@ figure {
   font-size: 36px;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 10px;
+  padding-top: 8px;
   width: 60px;
-  height: 55px;
+  height: 52px;
   user-select: none;
 }
 
