--- a/assets/pyreadhome.css
+++ b/assets/pyreadhome.css
@@ -1,6 +1,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #303030;
+  overflow-x: hidden;
+}
+
+ol {
+  margin-left: 20px;
 }
 
 .article {
