Improved frontend, added capability to load articles in background

--- a/assets/pyreadhome.css
+++ b/assets/pyreadhome.css
@@ -178,11 +178,11 @@ figure {
   transition: 0.2s;
 }
 
-.sidenav:hover {
+.sidenav:hover, .sidenav.active {
   width: calc(max(200px, 20vw));
 }
 
-.sidenav-linkcon:hover {
+.sidenav-linkcon:hover, .sidenav-linkcon.highlight {
   background-color: aliceblue;
 }
 
